remove api keys

--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -596,7 +596,7 @@
     "import os\n",
     "import openai\n",
     "\n",
-    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY', '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')\n"
+    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY')\n"
    ]
   },
   {
