--- a/RAG_query_10ks.ipynb
+++ b/RAG_query_10ks.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY', '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')\n",
+    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY')\n",
     "\n",
     "PINECONE_API_KEY = os.environ.get('PINECONE_API_KEY', '546106c9-d7dd-439d-877b-157320aa3eda')\n",
     "PINECONE_API_ENV = os.environ.get('PINECONE_API_ENV', 'gcp-starter')"
