--- a/Fine_tuning_test.ipynb
+++ b/Fine_tuning_test.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY', '')"
+    "OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY')"
    ]
   },
   {
