add chroma db for creation of separate databases

--- a/Latest finetuning/Dataset_creation_chroma.ipynb
+++ b/Latest finetuning/Dataset_creation_chroma.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "a9f48b24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/pinecone/index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import PyPDF2\n",
     "from langchain.document_loaders import UnstructuredPDFLoader, OnlinePDFLoader, PyPDFLoader\n",
@@ -27,54 +18,18 @@
     "from langchain.llms import OpenAI\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.chains import RetrievalQA\n",
-    "from langchain.chains import RetrievalQAWithSourcesChain\n",
+    "from langchain.vectorstores import Chroma\n",
     "from langchain.llms import OpenAI\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
     "import json\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fe39202",
-   "metadata": {},
-   "source": [
-    "Following this tutorial: https://dipankarmedh1.medium.com/exploring-the-power-of-rag-and-openais-function-calling-for-question-answering-d512c45c56b5"
+    "import re\n",
+    "import datetime\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "29b1f7de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_text_from_pdf(file_path: str) -> str:\n",
-    "        # Create a PDF reader object\n",
-    "    pdf_reader = PyPDFLoader(file_path)\n",
-    "    data = pdf_reader.load()\n",
-    "    \n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d808c681",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data_chunks(data: str, chunk_size: int):\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=chunk_size, chunk_overlap=5,\n",
-    "                        separators=[\"\\n\\n\", \"\\n\", \" \", \"\"], length_function=len)\n",
-    "    #chunks = text_splitter.split_text(data)\n",
-    "    chunks = text_splitter.split_documents(data)\n",
-    "    return chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ca63217d",
    "metadata": {},
    "outputs": [],
@@ -86,30 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2bbe93d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pinecone.init(\n",
-    "    api_key= PINECONE_API_KEY,\n",
-    "    environment= PINECONE_API_ENV \n",
-    ")\n",
-    "index_name = 'langchaintest2'\n",
-    "\n",
-    "if index_name not in pinecone.list_indexes():\n",
-    "    # we create a new index\n",
-    "    pinecone.create_index(\n",
-    "        name=index_name,\n",
-    "        metric='cosine',\n",
-    "        dimension=1536  # 1536 dim of text-embedding-ada-002\n",
-    ")\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "id": "bf7be42b",
    "metadata": {},
    "outputs": [],
@@ -119,167 +51,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "25dd0020",
+   "execution_count": 89,
+   "id": "6df6fb74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_knowledge_hub(chunks: list):\n",
-    "    index = pinecone.Index(index_name)\n",
-    "    text_field = \"text\"\n",
-    "    embeddings = OpenAIEmbeddings(openai_api_key= OPENAI_API_KEY)\n",
-    "    knowledge_hub = Pinecone(index, embeddings.embed_query, text_field)\n",
-    "    return knowledge_hub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "9bf2e1d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_answer_LLM(\n",
-    "        question: str,\n",
-    "        data: str,\n",
-    "        chunk_size: int = 1000,\n",
-    "        chain_type: str = 'stuff',\n",
-    "    ) -> str:    \n",
-    "    if data == \"\":\n",
-    "        return \"\"\n",
-    "    \n",
-    "    chunks = get_data_chunks(data, chunk_size=chunk_size)  # create text chunks\n",
-    "    knowledge_hub = create_knowledge_hub(chunks)  # create knowledge hub\n",
+    "def create_knowledge_hub(path_to_10k):\n",
+    "    now = datetime.datetime.now()\n",
+    "    timestamp = now.strftime(\"%Y%m%d%H%M%S\")\n",
+    "    db_directory = \"db_\" + timestamp\n",
     "\n",
-    "    retriever = knowledge_hub.as_retriever(\n",
-    "        search_type=\"similarity\", search_kwargs={\"k\": 2}\n",
+    "    loader = PyPDFLoader(path_to_10k)\n",
+    "    documents = loader.load()\n",
+    "    splitter = RecursiveCharacterTextSplitter(\n",
+    "        chunk_size=1200, \n",
+    "        chunk_overlap=5,\n",
+    "        separators=[\"\\n\\n\", \"\\n\", \" \", \"\"],\n",
+    "        length_function=len)\n",
+    "    texts = splitter.split_documents(documents)\n",
+    "    vectordb = Chroma.from_documents(\n",
+    "        documents=texts, \n",
+    "        embedding=embeddings,\n",
+    "        persist_directory=db_directory\n",
     "    )\n",
-    "    source = knowledge_hub.similarity_search(question, k = 1)\n",
-    "    print(\"test\", source)\n",
+    "    vectordb.persist()\n",
     "\n",
-    "    chain = RetrievalQA.from_chain_type(\n",
-    "        llm=OpenAI(temperature=0.3, model_name=\"gpt-3.5-turbo\", openai_api_key = OPENAI_API_KEY),\n",
-    "        chain_type=chain_type,\n",
-    "        retriever=retriever,\n",
-    "        return_source_documents=True,\n",
-    "    )\n",
-    "    result = chain({\"query\": question})\n",
-    "\n",
-    "    return result['result'], source"
+    "    return vectordb, db_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6fefc552",
+   "execution_count": 90,
+   "id": "bc0cbb76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_relevant_chunk(\n",
-    "        question: str,\n",
-    "        data: str,\n",
-    "        chunk_size: int = 1000,\n",
-    "    ) -> str:    \n",
-    "    if data == \"\":\n",
-    "        return \"\"\n",
+    "def delete_chroma_db(db_directory):\n",
+    "    try:\n",
+    "        # Remove the entire directory, including all its contents\n",
+    "        shutil.rmtree(db_directory)\n",
+    "        print(f\"Chroma database '{db_directory}' deleted successfully.\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Chroma database '{db_directory}' not found.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error deleting Chroma database: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9b837ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_json(path_to_json, path_to_10k, question, answer):\n",
+    "    db, db_dir = create_knowledge_hub(path_to_10k)\n",
+    "\n",
+    "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
+    "    source2 = db.similarity_search(question, k = 2)[1].page_content\n",
+    "\n",
+    "    source1 = source1.replace(r'\\x', '')\n",
+    "    source2 = source2.replace(r'\\x', '')\n",
+    "\n",
+    "    source1 = source1.replace('\\n', ' ')\n",
+    "    source2 = source2.replace('\\n', ' ')\n",
+    "\n",
+    "    ROLE_SYSTEM = \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"\n",
     "    \n",
-    "    chunks = get_data_chunks(data, chunk_size=chunk_size)  # create text chunks\n",
-    "    knowledge_hub = create_knowledge_hub(chunks)  # create knowledge hub\n",
-    "\n",
-    "    source = knowledge_hub.similarity_search(question, k = 2)\n",
-    "\n",
-    "    print(\"most relevant chunk is,\", source)\n",
-    "    return source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "64899a4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fill_train_data(\n",
-    "        question: str, #our own question\n",
-    "        pdf_path: str,\n",
-    "):\n",
-    "    \n",
-    "        \"\"\"\n",
-    "        This function will take in our question and the path to the pdf, find the most relevant chunk and return that chunk\n",
-    "        \"\"\"\n",
-    "\n",
-    "        #getting the most relevant chunk\n",
-    "        CHUNK_SIZE = 400\n",
-    "        data = extract_text_from_pdf(pdf_path)\n",
-    "        context = get_relevant_chunk(question, data, CHUNK_SIZE)\n",
-    "\n",
-    "        page_content = context[0].page_content\n",
-    "        page_content = page_content.replace(r'\\x', '')\n",
-    "        \n",
-    "        #print(page_content)\n",
-    "\n",
-    "        return page_content\n",
-    "\n",
-    "        #return context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "10cd6450",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ROLE_SYSTEM = \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"\n",
-    "\n",
-    "def add_to_training_file(path_to_json, question, answer, context):\n",
     "    my_data = (\n",
     "        f'{{\"messages\": [{{\"role\": \"system\", \"content\": \"{ROLE_SYSTEM}\"}},'\n",
-    "        f'{{\"role\": \"user\", \"content\": \"This is our information from the 10-K: {context}. Now, this is our question: {question}\"}},'\n",
+    "        f'{{\"role\": \"user\", \"content\": \"This is our information from the 10-K: {source1} {source2}. Now, this is our question: {question}\"}},'\n",
     "        f'{{\"role\": \"assistant\", \"content\": \"{answer}\"}}]}}'\n",
     "        '\\n'\n",
     "    )\n",
+    "\n",
+    "    delete_chroma_db(db_dir)\n",
     "\n",
     "    try:\n",
     "        with open(path_to_json, \"a\") as file:\n",
     "            file.write(my_data)\n",
     "    except (FileNotFoundError, json.JSONDecodeError):\n",
     "        return\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "47b8a822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fill_json(path_to_json, pdf_path, question, answer):\n",
-    "    context = fill_train_data(question, pdf_path)\n",
-    "    print(context)\n",
-    "    add_to_training_file(path_to_json, question, answer, context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "75789b3f",
+   "execution_count": 83,
+   "id": "9ac5cfa6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/langchain/vectorstores/pinecone.py:59: UserWarning: Passing in `embedding` as a Callable is deprecated. Please pass in an Embeddings object instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Business Seasonality and Product IntroductionsThe Company has historically experienced higher net sales in its ﬁrst quarter compared to other quarters in its ﬁscal year due in part toseasonal holiday demand. Additionally, new product and service introductions can signiﬁcantly impact net sales, cost of sales andoperating expenses. The timing of product introductions can also impact the Company’s net sales to its indirect distribution channels asthese channels are ﬁlled with new inventory following a product launch, and channel inventory of an older product often declines as thelaunch of a newer product approaches. Net sales can also be affected when consumers and distributors anticipate a productintroduction.Human CapitalThe Company believes it has a talented, motivated and dedicated team, and works to create an inclusive, safe and supportiveenvironment for all of its team members. As of September 24, 2022, the Company had approximately 164,000 full-time equivalentemployees.Workplace Practices and PoliciesThe Company is an equal opportunity employer committed to inclusion and diversity and to providing a workplace free of harassment ordiscrimination.Compensation and BeneﬁtsThe Company believes that compensation should be competitive and equitable, and should enable employees to share in theCompany’s success. The Company recognizes its people are most likely to thrive when they have the resources to meet their needs andthe time and support to succeed in their professional and personal lives. In support of this, the Company offers a wide variety of beneﬁtsfor employees around the world and invests in tools and resources that are designed to support employees’ individual growth anddevelopment.Inclusion and DiversityThe Company remains committed to its vision to build and sustain a more inclusive workforce that is representative of the communities itserves. The Company continues to work to increase diverse representation at every level, foster an inclusive culture, and\n"
+      "Chroma database 'db_20231024215659' deleted successfully.\n"
      ]
     }
    ],
@@ -289,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 97,
    "id": "67b24384",
    "metadata": {},
    "outputs": [],
@@ -321,7 +188,6 @@
     "    \"How much debt does the company have, and what are the terms and conditions?\": \"Bank of America has $862 billion in total debt securities, and $4.5 billion in long term debt. \",\n",
     "\n",
     "}\n",
-    "#ISSUE HERE TOO\n",
     "question_answer_dic_nvidia = {\n",
     "    \"How does the company generate its revenue? What are its main products or services? Please give me information for the company NVIDIA\": \"The Company, originally focused on PC graphics, now creates GPU architecture, highly used in AI, data science, autonomous vehicles among other industries. The business is split into two segments: Compute & Networking, including the Data Center, NVIDIA AI Enterprise, cryptocurrency mining processors, robotics, among more, and the Graphics segment, relating to the GPUs.\",\n",
     "    \"Does the company operate in multiple geographic regions or industries? Please give me information for the company NVIDIA\": \"Yes, the Company’s international operations are a significant part of the business.\",\n",
@@ -338,68 +204,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8ea25d9d",
+   "execution_count": 98,
+   "id": "aeefc4de",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/langchain/vectorstores/pinecone.py:59: UserWarning: Passing in `embedding` as a Callable is deprecated. Please pass in an Embeddings object instead.\n",
-      "  warnings.warn(\n"
+      "Chroma database 'db_20231024221245' deleted successfully.\n",
+      "Chroma database 'db_20231024221254' deleted successfully.\n",
+      "Chroma database 'db_20231024221302' deleted successfully.\n",
+      "Chroma database 'db_20231024221310' deleted successfully.\n",
+      "Chroma database 'db_20231024221318' deleted successfully.\n",
+      "Chroma database 'db_20231024221327' deleted successfully.\n",
+      "Chroma database 'db_20231024221335' deleted successfully.\n",
+      "Chroma database 'db_20231024221343' deleted successfully.\n",
+      "Chroma database 'db_20231024221352' deleted successfully.\n",
+      "Chroma database 'db_20231024221403' deleted successfully.\n",
+      "Chroma database 'db_20231024221411' deleted successfully.\n",
+      "Chroma database 'db_20231024221420' deleted successfully.\n",
+      "Chroma database 'db_20231024221428' deleted successfully.\n"
      ]
     }
    ],
    "source": [
+    "#For Apple\n",
     "aapl_file_path = \"../Documents/aapl-10-k.pdf\"\n",
-    "bofa_file_path = \"../Documents/bankofamerica-10K.pdf\"\n",
-    "nvidia_file_path = \"../Documents/nvda-10-k.pdf\"\n",
-    "\n",
-    "json_path = \".Datasets/openaitest_new.jsonl\"\n",
+    "json_path = \"./Datasets/test10k.jsonl\"\n",
     "\n",
     "for item in question_answer_dic_apple:\n",
-    "    fill_json(json_path, aapl_file_path, item, question_answer_dic_apple[item])\n",
-    "\n",
-    "#THE ISSUE IS HERE (The database is not finding the most relevant section from BofA, it is instead finding it from Apple)\n",
-    "for item in question_answer_dic_bofa:\n",
-    "    fill_json(json_path, bofa_file_path, item, question_answer_dic_bofa[item])\n",
-    "\n",
-    "#THE ISSUE IS HERE (The database is not finding the most relevant section from NVIDIA, it is instead finding it from Apple)\n",
-    "for item in question_answer_dic_nvidia:\n",
-    "    fill_json(json_path, nvidia_file_path, item, question_answer_dic_nvidia[item])"
+    "    fill_json(json_path, aapl_file_path, item, question_answer_dic_apple[item])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e1ca48e3",
+   "execution_count": 96,
+   "id": "5fcf279f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/langchain/vectorstores/pinecone.py:59: UserWarning: Passing in `embedding` as a Callable is deprecated. Please pass in an Embeddings object instead.\n",
-      "  warnings.warn(\n"
+      "Chroma database 'db_20231024221110' deleted successfully.\n",
+      "Chroma database 'db_20231024221134' deleted successfully.\n"
      ]
     }
    ],
    "source": [
-    "nvidia_file_path = \"../Documents/nvda-10-k.pdf\"\n",
-    "json_path = \"./Datasets/openaitest_new.jsonl\"\n",
+    "#For BofA\n",
+    "bofa_file_path = \"../Documents/bankofamerica-10K.pdf\"\n",
+    "json_path = \"./Datasets/test10k.jsonl\"\n",
     "\n",
-    "\n",
-    "for item in question_answer_dic_nvidia:\n",
-    "    fill_json(json_path, nvidia_file_path, item, question_answer_dic_nvidia[item])"
+    "for item in question_answer_dic_bofa:\n",
+    "    fill_json(json_path, bofa_file_path, item, question_answer_dic_bofa[item])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d895c3f9",
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "6672a2f8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chroma database 'db_20231024221450' deleted successfully.\n",
+      "Chroma database 'db_20231024221518' deleted successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "The resulting dataset from this is at ./Datasets/all_10k_dataset.jsonl"
+    "#For NVIDIA\n",
+    "nvidia_file_path = \"../Documents/nvda-10-k.pdf\"\n",
+    "json_path = \"./Datasets/test10k.jsonl\"\n",
+    "\n",
+    "for item in question_answer_dic_nvidia:\n",
+    "    fill_json(json_path, nvidia_file_path, item, question_answer_dic_nvidia[item])"
    ]
   },
   {
