create finetuning training set

--- a/Latest finetuning/Dataset_creation_chroma.ipynb
+++ b/Latest finetuning/Dataset_creation_chroma.ipynb
@@ -116,6 +116,12 @@
     "    source1 = source1.replace('\\n', ' ')\n",
     "    source2 = source2.replace('\\n', ' ')\n",
     "\n",
+    "    source1 = source1.replace('\\\"', ' ')\n",
+    "    source2 = source2.replace('\\\"', ' ')\n",
+    "\n",
+    "    source1 = source1.replace('\\'', ' ')\n",
+    "    source2 = source2.replace('\\'', ' ')\n",
+    "\n",
     "    ROLE_SYSTEM = \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"\n",
     "    \n",
     "    my_data = (\n",
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "id": "9ac5cfa6",
    "metadata": {},
    "outputs": [
@@ -146,12 +152,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chroma database 'db_20231024215659' deleted successfully.\n"
+      "Chroma database 'db_20231024223415' deleted successfully.\n"
      ]
     }
    ],
    "source": [
-    "fill_json(\"./Datasets/my_test_oct24\", \"../Documents/aapl-10-k.pdf\", \"How does the company generate its revenue? What are its main products or services?\", \"The Company designs, manufactures and markets smartphones (iPhones), personal computers (Macbooks and Macs), tablets (iPads), wearables and accessories (Airpods, Apple TV, Apple Watch), and sells a variety of related services.\")"
+    "fill_json(\"./Datasets/my_test_oct24\", \"../Documents/nvda-10-k.pdf\", \"What is the company's overall financial health, including its liquidity, solvency, and capital structure?\", \"Nvidia’s main source of liquidity are cash and cash equivalents which is enough to meet operating expenses for the next 12 months, signaling that the company is in good financial health. \")"
    ]
   },
   {
