--- a/Latest finetuning/Finetuned_model_GPT.ipynb
+++ b/Latest finetuning/Finetuned_model_GPT.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,20 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File successfully uploaded with ID: file-G66jFKJJLR4twLoGEfQsTV9M\n"
+      "File successfully uploaded with ID: file-83hRPnzwHCA8qWpNakrWchfC\n"
      ]
     }
    ],
    "source": [
     "response = openai.File.create(\n",
-    "  file=open(\"./Datasets/apple_dataset.jsonl\", \"rb\"),\n",
+    "  file=open(\"./Datasets/test10k.jsonl\", \"rb\"),\n",
     "  purpose='fine-tune',\n",
     "  user_provided_filename=\"train\"\n",
     ")\n",
@@ -54,15 +54,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject list at 0x110319630> JSON: {\n",
+       "<OpenAIObject list at 0x11c944400> JSON: {\n",
        "  \"object\": \"list\",\n",
        "  \"data\": [\n",
+       "    {\n",
+       "      \"object\": \"fine_tuning.job\",\n",
+       "      \"id\": \"ftjob-mYI9QyCFIcBGfWweAq7mW4FT\",\n",
+       "      \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "      \"created_at\": 1698200871,\n",
+       "      \"finished_at\": 1698201184,\n",
+       "      \"fine_tuned_model\": \"ft:gpt-3.5-turbo-0613:personal:anote:8DNzdQmV\",\n",
+       "      \"organization_id\": \"org-WM0C8DmpfiXb4ySIeUGFLcf2\",\n",
+       "      \"result_files\": [\n",
+       "        \"file-1VwcGlPkVu9xUluWC4h6DcWM\"\n",
+       "      ],\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"validation_file\": null,\n",
+       "      \"training_file\": \"file-yBh58DabfZY0hUh2BqPFZamM\",\n",
+       "      \"hyperparameters\": {\n",
+       "        \"n_epochs\": 4\n",
+       "      },\n",
+       "      \"trained_tokens\": 52492,\n",
+       "      \"error\": null\n",
+       "    },\n",
+       "    {\n",
+       "      \"object\": \"fine_tuning.job\",\n",
+       "      \"id\": \"ftjob-Pkd9Q8ulAtB7EbbTc6aY58Gd\",\n",
+       "      \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "      \"created_at\": 1696987687,\n",
+       "      \"finished_at\": 1696988031,\n",
+       "      \"fine_tuned_model\": \"ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc\",\n",
+       "      \"organization_id\": \"org-WM0C8DmpfiXb4ySIeUGFLcf2\",\n",
+       "      \"result_files\": [\n",
+       "        \"file-JgFfEm2h25wvVh3nELM9kcvX\"\n",
+       "      ],\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"validation_file\": null,\n",
+       "      \"training_file\": \"file-G66jFKJJLR4twLoGEfQsTV9M\",\n",
+       "      \"hyperparameters\": {\n",
+       "        \"n_epochs\": 10\n",
+       "      },\n",
+       "      \"trained_tokens\": 52840,\n",
+       "      \"error\": null\n",
+       "    },\n",
        "    {\n",
        "      \"object\": \"fine_tuning.job\",\n",
        "      \"id\": \"ftjob-0HFEZZwlI6vi3qWZeyhg20q9\",\n",
@@ -294,7 +334,7 @@
        "}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fine-tuning job created successfully with ID: ftjob-Pkd9Q8ulAtB7EbbTc6aY58Gd\n"
+      "Fine-tuning job created successfully with ID: ftjob-ClS1ABfjWqxNThtkysDDUQGF\n"
      ]
     }
    ],
@@ -330,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -339,25 +379,23 @@
      "text": [
       "{\n",
       "  \"object\": \"fine_tuning.job\",\n",
-      "  \"id\": \"ftjob-Pkd9Q8ulAtB7EbbTc6aY58Gd\",\n",
+      "  \"id\": \"ftjob-ClS1ABfjWqxNThtkysDDUQGF\",\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-      "  \"created_at\": 1696987687,\n",
-      "  \"finished_at\": 1696988031,\n",
-      "  \"fine_tuned_model\": \"ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc\",\n",
+      "  \"created_at\": 1698201395,\n",
+      "  \"finished_at\": null,\n",
+      "  \"fine_tuned_model\": null,\n",
       "  \"organization_id\": \"org-WM0C8DmpfiXb4ySIeUGFLcf2\",\n",
-      "  \"result_files\": [\n",
-      "    \"file-JgFfEm2h25wvVh3nELM9kcvX\"\n",
-      "  ],\n",
-      "  \"status\": \"succeeded\",\n",
+      "  \"result_files\": [],\n",
+      "  \"status\": \"validating_files\",\n",
       "  \"validation_file\": null,\n",
-      "  \"training_file\": \"file-G66jFKJJLR4twLoGEfQsTV9M\",\n",
+      "  \"training_file\": \"file-83hRPnzwHCA8qWpNakrWchfC\",\n",
       "  \"hyperparameters\": {\n",
-      "    \"n_epochs\": 10\n",
+      "    \"n_epochs\": \"auto\"\n",
       "  },\n",
-      "  \"trained_tokens\": 52840,\n",
+      "  \"trained_tokens\": null,\n",
       "  \"error\": null\n",
       "}\n",
-      "Fine-tuned model id: ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc\n"
+      "Fine-tuned model id: None\n"
      ]
     }
    ],
@@ -392,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +439,7 @@
      "text": [
       "{\n",
       "  \"role\": \"assistant\",\n",
-      "  \"content\": \"The first quarter.\"\n",
+      "  \"content\": \"The first quarter\"\n",
       "}\n"
      ]
     }
