add function to prompt new fine tuned model with any 10K

--- a/Latest finetuning/Finetuned_GPTmodel.ipynb
+++ b/Latest finetuning/Finetuned_GPTmodel.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "a9f48b24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/pinecone/index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import PyPDF2\n",
     "from langchain.document_loaders import UnstructuredPDFLoader, OnlinePDFLoader, PyPDFLoader\n",
@@ -24,12 +33,13 @@
     "import json\n",
     "import re\n",
     "import datetime\n",
-    "import shutil"
+    "import shutil\n",
+    "import openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ca63217d",
    "metadata": {},
    "outputs": [],
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "bf7be42b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "6df6fb74",
    "metadata": {},
    "outputs": [],
@@ -81,16 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "bc0cbb76",
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_chroma_db(db_directory):\n",
     "    try:\n",
-    "        # Remove the entire directory, including all its contents\n",
     "        shutil.rmtree(db_directory)\n",
-    "        print(f\"Chroma database '{db_directory}' deleted successfully.\")\n",
+    "        #print(f\"Chroma database '{db_directory}' deleted successfully.\")\n",
     "    except FileNotFoundError:\n",
     "        print(f\"Chroma database '{db_directory}' not found.\")\n",
     "    except Exception as e:\n",
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "id": "9b837ef9",
    "metadata": {},
    "outputs": [],
@@ -143,21 +152,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "9ac5cfa6",
+   "cell_type": "markdown",
+   "id": "ff01f398",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chroma database 'db_20231024223415' deleted successfully.\n"
-     ]
-    }
-   ],
    "source": [
-    "fill_json(\"./Datasets/my_test_oct24\", \"../Documents/nvda-10-k.pdf\", \"What is the company's overall financial health, including its liquidity, solvency, and capital structure?\", \"Nvidia’s main source of liquidity are cash and cash equivalents which is enough to meet operating expenses for the next 12 months, signaling that the company is in good financial health. \")"
+    "## Creation of the testset"
    ]
   },
   {
@@ -295,7 +294,64 @@
    "cell_type": "markdown",
    "id": "b52b783d",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Using the fine tuned GPT Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9d1c0f5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_gpt_finetuned_model(path_to_10k, question):\n",
+    "    db, db_dir = create_knowledge_hub(path_to_10k)\n",
+    "\n",
+    "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
+    "    source2 = db.similarity_search(question, k = 2)[1].page_content\n",
+    "\n",
+    "    completion = openai.ChatCompletion.create(\n",
+    "        model=\"ft:gpt-3.5-turbo-0613:personal:anote:8DO8V2LB\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"{source1}{source2} Now, this is our question: {question}\"}\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    delete_chroma_db(db_dir)\n",
+    "    \n",
+    "    return completion.choices[0].message[\"content\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9ac5cfa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chroma database 'db_20231025004742' deleted successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"The company's strategic priorities are the development and release of its hardware and software products, the expansion of its services and software offerings, Research and development, sales and marketing, and expansion of its distribution.\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ask_gpt_finetuned_model(\"../Documents/aapl-10-k.pdf\", \"What are the company's strategic priorities and growth prospects?\")"
+   ]
   }
  ],
  "metadata": {
