--- a/Latest finetuning/Testing_GPT_finetuning.ipynb
+++ b/Latest finetuning/Testing_GPT_finetuning.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -382,20 +382,22 @@
       "  \"id\": \"ftjob-ClS1ABfjWqxNThtkysDDUQGF\",\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"created_at\": 1698201395,\n",
-      "  \"finished_at\": null,\n",
-      "  \"fine_tuned_model\": null,\n",
+      "  \"finished_at\": 1698201734,\n",
+      "  \"fine_tuned_model\": \"ft:gpt-3.5-turbo-0613:personal:anote:8DO8V2LB\",\n",
       "  \"organization_id\": \"org-WM0C8DmpfiXb4ySIeUGFLcf2\",\n",
-      "  \"result_files\": [],\n",
-      "  \"status\": \"validating_files\",\n",
+      "  \"result_files\": [\n",
+      "    \"file-4AM0zYN7hzzFiPTsVskpeu62\"\n",
+      "  ],\n",
+      "  \"status\": \"succeeded\",\n",
       "  \"validation_file\": null,\n",
       "  \"training_file\": \"file-83hRPnzwHCA8qWpNakrWchfC\",\n",
       "  \"hyperparameters\": {\n",
-      "    \"n_epochs\": \"auto\"\n",
+      "    \"n_epochs\": 3\n",
       "  },\n",
-      "  \"trained_tokens\": null,\n",
+      "  \"trained_tokens\": 53235,\n",
       "  \"error\": null\n",
       "}\n",
-      "Fine-tuned model id: None\n"
+      "Fine-tuned model id: ft:gpt-3.5-turbo-0613:personal:anote:8DO8V2LB\n"
      ]
     }
    ],
@@ -416,7 +418,8 @@
    "source": [
     "## Model IDs for future reference: \n",
     "- Model trained on sarcastic data has model id: ft:gpt-3.5-turbo-0613:personal:anote:85SGpKuh\n",
-    "- Model trained on just apple dataset has model id: ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc"
+    "- Model trained on just apple dataset has model id: ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc\n",
+    "- Model trained on all 3 (Apple, BofA, NVIDIA) has model id: ft:gpt-3.5-turbo-0613:personal:anote:8DO8V2LB"
    ]
   },
   {
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -439,15 +442,14 @@
      "text": [
       "{\n",
       "  \"role\": \"assistant\",\n",
-      "  \"content\": \"The first quarter\"\n",
+      "  \"content\": \"The Company has historically experienced higher net sales in its \\ufb01rst quarter compared to other quarters in its \\ufb01scal year due in part to seasonal holiday demand\"\n",
       "}\n"
      ]
     }
    ],
    "source": [
     "completion = openai.ChatCompletion.create(\n",
-    "  #model=fine_tuned_model_id,\n",
-    "  model=\"ft:gpt-3.5-turbo-0613:personal:anote:88IOfgTc\",\n",
+    "  model=fine_tuned_model_id,\n",
     "  messages=[\n",
     "    {\"role\": \"system\", \"content\": \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"},\n",
     "    {\"role\": \"user\", \"content\": \"This is our information from the 10-K: Business Seasonality and Product IntroductionsThe Company has historically experienced higher net sales in its ﬁrst quarter compared to other quarters in its ﬁscal year due in part toseasonal holiday demand. Additionally, new product and service introductions can signiﬁcantly impact net sales, cost of sales andoperating expenses. The timing of product introductions can also impact the Company’s net sales to its indirect distribution channels asthese channels are ﬁlled with new inventory following a product launch, and channel inventory of an older product often declines as thelaunch of a newer product approaches. Net sales can also be affected when consumers and distributors anticipate a productintroduction.Human CapitalThe Company believes it has a talented, motivated and dedicated team, and works to create an inclusive, safe and supportiveenvironment for all of its team members. As of September 24, 2022, the Company had approximately 164,000 full-time equivalentemployees.Workplace Practices and PoliciesThe Company is an equal opportunity employer committed to inclusion and diversity and to providing a workplace free of harassment ordiscrimination.Compensation and BeneﬁtsThe Company believes that compensation should be competitive and equitable, and should enable employees to share in theCompany’s success. The Company recognizes its people are most likely to thrive when they have the resources to meet their needs andthe time and support to succeed in their professional and personal lives. In support of this, the Company offers a wide variety of beneﬁtsfor employees around the world and invests in tools and resources that are designed to support employees’ individual growth anddevelopment.Inclusion and DiversityThe Company remains committed to its vision to build and sustain a more inclusive workforce that is representative of the communities itserves. The Company continues to work to increase diverse representation at every level, foster an inclusive culture, and. Now, this is our question: Which quarter does Apple usually have higher net sales in?\"}\n",
